# fastapi-template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: app.py
